# app/Modules/Reference/Http/Requests/StudyStageRequest/UpdateStudyStageRequest.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Modules\Reference\Http\Requests\StudyStageRequest;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateStudyStageRequest extends FormRequest
+{
+    public function authorize()
+    {
+        return true;
+    }
+
+    public function rules()
+    {
+        return [
+            // aturan validasi untuk tabel study_stages
+        ];
+    }
+}
